Project

General

Profile

Actions

Bug #7352

closed

Array#bsearch test failure on Range (32bits MinGW)

Bug #7352: Array#bsearch test failure on Range (32bits MinGW)

Added by luislavena (Luis Lavena) almost 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2012-11-15 trunk 37656) [i386-mingw32]
Backport:
[ruby-core:49351]

Description

=begin
Hello,

After r37655, I noticed a failing test on RubyInstaller CI for x86:

test_bsearch_for_float(TestRange) [C:/Users/Luis/Code/ruby/ruby/test/ruby/test_range.rb:392]:
Expected -1.7976931348623157e+308 to be >= NaN.

This do not fail on x64, both running with GCC 4.7.2

I don't have Linux test results to compare at this time, but wanted to raise awareness of this issue.

Thank you
=end


Related issues 1 (0 open — 1 closed)

Related to Ruby - Feature #4766: Range#bsearchClosedmame (Yusuke Endoh)Actions
Actions

Also available in: PDF Atom