* range.c (range_bsearch): fix some bugs: a documentation bug, a wrong   condition, missed break in switch/case, and workaround for GCC   optimization. See [ruby-core:49364] in detail.  A great patch from   Heesob Park. [Bug #7352] [Feature #4766]

* array.c (rb_ary_bsearch): fix similar bug (missed break).

* test/ruby/test_range.rb: add two test cases for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37662 b2dd03c8-39d4-4d8f-98ff-823fe69b080e